--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://kit.fontawesome.com/2e94843a60.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="styles/portfolio.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -23,5 +27,14 @@
     />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="hero">
+      <p>Hello, I am</p>
+      <h1>Samantha Volesky</h1>
+      <h2 class="mb-5">Front-end developer based in United States</h2>
+      <div>
+        <a href="#" class="btn btn-branding">Contact me</a>
+      </div>
+    </div>
+  </body>
 </html>
