--- a/index.html
+++ b/index.html
@@ -36,5 +36,75 @@
         <a href="#" class="btn btn-branding">Contact me</a>
       </div>
     </div>
+
+    <p class="text-center m-5">In the life of a 4 year old</p>
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img
+            src="images/NewbornZ.jpg"
+            alt="Zoey newborn picture"
+            class="img-fluid"
+          />
+        </div>
+        <div class="col">
+          <div class="newborn-description">
+            <h2 class="mb-5">Zoey age ?</h2>
+            <p class="mb-4 text-muted">
+              Far far away, behind the word mountains, far from the countries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large language ocean. A small river named Duden flows by
+            </p>
+
+            <a href="#" class="btn btn-branding-outline">Learn more</a>
+          </div>
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col">
+          <div class="newborn-description">
+            <h2 class="mb-5">Zoey age ?</h2>
+            <p class="mb-4 text-muted">
+              Far far away, behind the word mountains, far from the countries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large language ocean. A small river named Duden flows by
+            </p>
+
+            <a href="#" class="btn btn-branding-outline">Learn more</a>
+          </div>
+        </div>
+        <div class="col d-none d-lg-block">
+          <img
+            src="images/zoeyone.jpg"
+            alt="Zoey one picture"
+            class="img-fluid"
+          />
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img
+            src="images/zoeythree.jpg"
+            alt="Zoey three picture"
+            class="img-fluid"
+          />
+        </div>
+        <div class="col">
+          <div class="newborn-description">
+            <h2 class="mb-5">Zoey age ?</h2>
+            <p class="mb-4 text-muted">
+              Far far away, behind the word mountains, far from the countries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large language ocean. A small river named Duden flows by
+            </p>
+
+            <a href="#" class="btn btn-branding-outline">Learn more</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
