added border, spacing, and edited the paragraphs.

--- a/index.html
+++ b/index.html
@@ -39,69 +39,84 @@
 
     <p class="text-center m-5">In the life of a 4 year old</p>
     <div class="container">
-      <div class="row mb-5">
+      <div class="row">
         <div class="col d-none d-lg-block">
           <img
             src="images/NewbornZ.jpg"
             alt="Zoey newborn picture"
-            class="img-fluid"
+            class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
         <div class="col">
           <div class="newborn-description">
-            <h2 class="mb-5">Zoey age ?</h2>
+            <h2 class="mb-5">Newborn Zoey</h2>
             <p class="mb-4 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
+              Zoey Richalyn's birth in Colorado marked the arrival of a healthy
+              and special little girl. She held a unique position in her family
+              as the third child, and the only girl among her siblings.
+              Moreover, Zoey's birth was particularly significant as she became
+              the first girl in the generation on both sides of the family. This
+              made her even more cherished and loved by her relatives, as she
+              brought a sense of novelty and joy to the family lineage.
             </p>
 
-            <a href="#" class="btn btn-branding-outline">Learn more</a>
+            <a href="#" class="btn btn-branding-outline shadow">Learn more</a>
           </div>
         </div>
       </div>
-      <div class="row mb-5">
+      <div class="row">
         <div class="col">
           <div class="newborn-description">
-            <h2 class="mb-5">Zoey age ?</h2>
+            <h2 class="mb-5">Zoey age 1-2</h2>
             <p class="mb-4 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
+              From a very young age, Zoey's happy place was undoubtedly anywhere
+              in nature, where she could explore, play, and immerse herself in
+              the wonders of the outdoors. Her adventurous spirit made her stand
+              out and brought joy to those who witnessed her genuine excitement
+              and curiosity about the world around her.
             </p>
 
-            <a href="#" class="btn btn-branding-outline">Learn more</a>
+            <a href="#" class="btn btn-branding-outline shadow">Learn more</a>
           </div>
         </div>
         <div class="col d-none d-lg-block">
           <img
             src="images/zoeyone.jpg"
             alt="Zoey one picture"
-            class="img-fluid"
+            class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
       </div>
-      <div class="row mb-5">
+      <div class="row">
         <div class="col d-none d-lg-block">
           <img
             src="images/zoeythree.jpg"
             alt="Zoey three picture"
-            class="img-fluid"
+            class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
         <div class="col">
           <div class="newborn-description">
-            <h2 class="mb-5">Zoey age ?</h2>
+            <h2 class="mb-5">Zoey age 3-4</h2>
             <p class="mb-4 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
+              As Zoey Richalyn grew older, her love for the outdoors continued
+              to flourish, but she also developed new interests that enriched
+              her life even further. Among these interests were dance, music,
+              and imagination. <br />Zoey discovered her passion for dance
+              moving gracefully and rhythmically to the music. Whether she was
+              singing or dancing along to her favorite songs, she embraced the
+              power of music as a means of self-expression and creativity.
+              Zoey's imagination also played a significant role in her life. She
+              has a vibrant and creative mind that allowed her to transform
+              ordinary moments into extraordinary adventures. Whether she was
+              pretending to be an explorer on a jungle safari or a brave knight
+              saving a kingdom, her imagination knows no bounds.<br />
+              Her spirit is infectious, and she inspires those around her to
+              embrace their passions, explore their creativity, and find joy in
+              the simple pleasures of life.
             </p>
 
-            <a href="#" class="btn btn-branding-outline">Learn more</a>
+            <a href="#" class="btn btn-branding-outline shadow">Learn more</a>
           </div>
         </div>
       </div>
