--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>In the life of a 4 year old</title>
   </head>
   <body>
     <div class="hero">
