Added the about page, an image, and css

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <p class="text-center m-5">In the life of a 4 year old</p>
     <div class="container">
       <div class="row">
-        <div class="col d-none d-lg-block">
+        <div class="col d-none d-lg-block text">
           <img
             src="images/NewbornZ.jpg"
             alt="Zoey newborn picture"
@@ -65,7 +65,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col">
+        <div class="col text-2">
           <div class="newborn-description">
             <h2 class="mb-5">Zoey age 1-2</h2>
             <p class="mb-4 text-muted">
@@ -95,7 +95,7 @@
             class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
-        <div class="col">
+        <div class="col text-3">
           <div class="newborn-description">
             <h2 class="mb-5">Zoey age 3-4</h2>
             <p class="mb-4 text-muted">
