created newborn html, added CSS

--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
             </p>
 
             <a href="" class="btn btn-branding-outline shadow"
-              >Veiw more photos</a
+              >View more photos</a
             >
           </div>
         </div>
