--- a/newborn.html
+++ b/newborn.html
@@ -32,7 +32,87 @@
   <body>
     <div class="newborn-container">
       <div class="newborn">
-        <h1>Newborn photos of Zoey</h1>
+        <h1 class="text-center">Newborn photos of Zoey</h1>
+        <div class="row">
+          <div class="col-sm-6">
+            <img
+              src="images/newborn1.jpg"
+              alt=""
+              class="img-fluid rounded mt-5 border p-2 shadow"
+            />
+          </div>
+          <div class="col-sm-6">
+            <img
+              src="images/newborn2.jpg"
+              alt=""
+              class="img-fluid rounded mt-5 border p-2 shadow"
+            />
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-6">
+            <img
+              src="images/newborn3.jpg"
+              alt=""
+              class="img-fluid rounded mt-5 border p-2 shadow"
+            />
+          </div>
+          <div class="col-sm-6">
+            <img
+              src="images/newborn4.jpg"
+              alt=""
+              class="img-fluid rounded mt-5 border p-2 shadow"
+            />
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-6">
+            <img
+              src="images/newborn5.jpg"
+              alt=""
+              class="img-fluid rounded mt-5 border p-2 shadow"
+            />
+          </div>
+          <div class="col-sm-6">
+            <img
+              src="images/newborn8.jpg"
+              alt=""
+              class="img-fluid rounded mt-5 border p-2 shadow"
+            />
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-6">
+            <img
+              src="images/newborn6.jpg"
+              alt=""
+              class="img-fluid rounded mt-5 border p-2 shadow"
+            />
+          </div>
+          <div class="col-sm-6">
+            <img
+              src="images/newborn9.jpg"
+              alt=""
+              class="img-fluid rounded mt-5 border p-2 shadow"
+            />
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-6">
+            <img
+              src="images/newborn7.jpeg"
+              alt=""
+              class="img-fluid rounded mt-5 border p-2 shadow"
+            />
+          </div>
+          <div class="col-sm-6 ten">
+            <img
+              src="images/newborn10.jpg"
+              alt=""
+              class="img-fluid rounded mt-5 border p-2 shadow"
+            />
+          </div>
+        </div>
       </div>
     </div>
   </body>
