created three-four html

--- a/one-two.html
+++ b/one-two.html
@@ -34,6 +34,75 @@
       <div class="one-two">
         <h1 class="text-center">Age 1-2 photos of Zoey</h1>
       </div>
+      <div class="row">
+        <div class="col-sm-6">
+          <img
+            src="images/one1.jpg"
+            alt=""
+            class="img-fluid rounded mt-5 border p-2 shadow"
+          />
+        </div>
+        <div class="col-sm-6">
+          <img
+            src="images/one4.jpg"
+            alt=""
+            class="img-fluid rounded mt-5 border p-2 shadow"
+          />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <img
+            src="images/one3.JPG"
+            alt=""
+            class="img-fluid rounded mt-5 border p-2 shadow"
+          />
+        </div>
+        <div class="col-md-6">
+          <img src="images/one2.jpg" alt="" class="img-fluid mt-5 p-2 shadow" />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-12">
+          <img
+            src="images/one5.jpg"
+            alt=""
+            class="img-fluid rounded mt-5 border p-2 shadow"
+          />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <img
+            src="images/two1.jpg"
+            alt=""
+            class="img-fluid rounded mt-5 border p-2 shadow"
+          />
+        </div>
+        <div class="col-md-6">
+          <img
+            src="images/two2.jpg"
+            alt=""
+            class="img-fluid rounded mt-5 border p-2 shadow"
+          />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <img
+            src="images/two3.jpg"
+            alt=""
+            class="img-fluid rounded mt-5 border p-2 shadow"
+          />
+        </div>
+        <div class="col-md-6">
+          <img
+            src="images/two4.JPG"
+            alt=""
+            class="img-fluid rounded mt-5 border p-2 shadow"
+          />
+        </div>
+      </div>
     </div>
   </body>
 </html>
