added links for contact info

--- a/contact.html
+++ b/contact.html
@@ -29,5 +29,25 @@
 
     <title>Contact Me</title>
   </head>
-  <body></body>
+  <body>
+    <div class="contact-container">
+      <div class="contact">
+        <h1 class="mb-5">Let's get in touch!</h1>
+        <h3>Email</h3>
+        <p>
+          <a href="mailto:svolesky317@gmail.com">svolesky317@gmail.com</a>
+        </p>
+        <h3>Instagram</h3>
+        <p>
+          <a href="https://instagram.com/sjvolesky" target="_blank"
+            >@sjvolesky</a
+          >
+        </p>
+        <h3>Zoey's Instagram</h3>
+        <p>
+          <a href="https://instagram.com/zoeymuck" target="_blank">@zoeymcuk</a>
+        </p>
+      </div>
+    </div>
+  </body>
 </html>
