--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
     <title>In the life of a 4 year old</title>
   </head>
   <body>
+    <nav>
+      <img src="images/logo.png" class="logo" alt="" />
+      <ul>
+        <li>Home</li>
+        <li>About</li>
+        <li>Contact</li>
+      </ul>
+    </nav>
     <div class="hero">
       <p>Hello, I am</p>
       <h1>Samantha Volesky</h1>
