--- a/index.html
+++ b/index.html
@@ -28,14 +28,22 @@
     <title>In the life of a 4 year old</title>
   </head>
   <body>
-    <nav>
-      <img src="images/logo.png" class="logo" alt="" />
-      <ul>
-        <li>Home</li>
-        <li>About</li>
-        <li>Contact</li>
-      </ul>
-    </nav>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <img src="images/logo.png" class="logo" alt="" />
+        <ul>
+          <li class="active">
+            <a href="/"> Home</a>
+          </li>
+          <li>
+            <a href="/about.html"> About</a>
+          </li>
+          <li>
+            <a href="/contact.html"> Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
     <div class="hero">
       <p>Hello, I am</p>
       <h1>Samantha Volesky</h1>
