added the nav bar to the rest of my pages.

--- a/about.html
+++ b/about.html
@@ -30,6 +30,29 @@
     <title>About Samantha</title>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/">
+          <img src="images/logo.png" class="logo d-none d-sm-block" alt="" />
+          <img
+            src="images/logo-small.jpg"
+            class="logo d-block d-md-none"
+            alt=""
+          />
+        </a>
+        <ul>
+          <li>
+            <a href="/"> Home</a>
+          </li>
+          <li class="active">
+            <a href="/about.html"> About</a>
+          </li>
+          <li>
+            <a href="/contact.html"> Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
     <div class="about-section container">
       <div class="row">
         <div class="col-md-6">
@@ -63,8 +86,8 @@
               being part of her journey.
             </p>
 
-            <a href="" class="btn btn-branding-outline shadow"
-              >View more photos</a
+            <a href="/index.html" class="btn btn-branding-outline shadow"
+              >Back to homepage</a
             >
           </div>
         </div>
