--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,30 @@
     <title>Contact Me</title>
   </head>
   <body>
-    <div class="contact-container">
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/">
+          <img src="images/logo.png" class="logo d-none d-sm-block" alt="" />
+          <img
+            src="images/logo-small.jpg"
+            class="logo d-block d-md-none"
+            alt=""
+          />
+        </a>
+        <ul>
+          <li>
+            <a href="/"> Home</a>
+          </li>
+          <li>
+            <a href="/about.html"> About</a>
+          </li>
+          <li class="active">
+            <a href="/contact.html"> Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <div class="contact-container text-center">
       <div class="contact">
         <h1 class="mb-5">Let's get in touch!</h1>
         <h3>Email</h3>
