--- a/index.html
+++ b/index.html
@@ -30,7 +30,14 @@
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <img src="images/logo.png" class="logo" alt="" />
+        <a href="/">
+          <img src="images/logo.png" class="logo d-none d-sm-block" alt="" />
+          <img
+            src="images/logo-small.jpg"
+            class="logo d-block d-md-none"
+            alt=""
+          />
+        </a>
         <ul>
           <li class="active">
             <a href="/"> Home</a>
@@ -76,7 +83,9 @@
               brought a sense of novelty and joy to the family lineage.
             </p>
 
-            <a href="#" class="btn btn-branding-outline shadow">Learn more</a>
+            <a href="newborn.html" class="btn btn-branding-outline shadow"
+              >View more photos</a
+            >
           </div>
         </div>
       </div>
@@ -92,7 +101,9 @@
               and curiosity about the world around her.
             </p>
 
-            <a href="#" class="btn btn-branding-outline shadow">Learn more</a>
+            <a href="one-two.html" class="btn btn-branding-outline shadow"
+              >View more photos</a
+            >
           </div>
         </div>
         <div class="col d-none d-lg-block">
@@ -132,7 +143,9 @@
               the simple pleasures of life.
             </p>
 
-            <a href="#" class="btn btn-branding-outline shadow">Learn more</a>
+            <a href="/three-four.html" class="btn btn-branding-outline shadow"
+              >View more photos</a
+            >
           </div>
         </div>
       </div>
