--- a/three-four.html
+++ b/three-four.html
@@ -30,9 +30,32 @@
     <title>3-4 year photos</title>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/">
+          <img src="images/logo.png" class="logo d-none d-sm-block" alt="" />
+          <img
+            src="images/logo-small.jpg"
+            class="logo d-block d-md-none"
+            alt=""
+          />
+        </a>
+        <ul>
+          <li>
+            <a href="/"> Home</a>
+          </li>
+          <li>
+            <a href="/about.html"> About</a>
+          </li>
+          <li>
+            <a href="/contact.html"> Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
     <div class="three-four-container">
       <div class="three-four">
-        <h1 class="text-center">Age 3-4 photos of Zoey</h1>
+        <h1 class="text-center mt-4">Age 3-4 photos of Zoey</h1>
       </div>
       <div class="row">
         <div class="col-sm-6">
