added footers and contact links

--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
               being part of her journey.
             </p>
 
-            <a href="/index.html" class="btn btn-branding-outline shadow"
+            <a href="/index.html" class="btn btn-branding shadow"
               >Back to homepage</a
             >
           </div>
@@ -99,6 +99,21 @@
           />
         </div>
       </div>
+      <footer>
+        <div class="d-flex justify-content-center mb-4">
+          <a href="mailto:svolesky317@gmail.com" class="email-link"
+            >svolesky317@gmail.com</a
+          >
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a href="https://instagram.com/sjvolesky" target="_blank"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+          <a href="https://www.github.com/sjvolesky" target="_blank"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
