--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       <h1>Samantha Volesky</h1>
       <h2 class="mb-5">Front-end developer based in United States</h2>
       <div>
-        <a href="#" class="btn btn-branding">Contact me</a>
+        <a href="contact.html" class="btn btn-branding shadow">Contact me</a>
       </div>
     </div>
 
-    <p class="text-center m-5">In the life of a 4 year old</p>
+    <p class="text-center mt-5">In the life of a 4 year old</p>
     <div class="container">
       <div class="row">
         <div class="col d-none d-lg-block text">
@@ -83,7 +83,7 @@
               brought a sense of novelty and joy to the family lineage.
             </p>
 
-            <a href="newborn.html" class="btn btn-branding-outline shadow"
+            <a href="newborn.html" class="btn btn-branding shadow"
               >View more photos</a
             >
           </div>
@@ -101,7 +101,7 @@
               and curiosity about the world around her.
             </p>
 
-            <a href="one-two.html" class="btn btn-branding-outline shadow"
+            <a href="one-two.html" class="btn btn-branding shadow"
               >View more photos</a
             >
           </div>
@@ -143,12 +143,27 @@
               the simple pleasures of life.
             </p>
 
-            <a href="/three-four.html" class="btn btn-branding-outline shadow"
+            <a href="/three-four.html" class="btn btn-branding shadow"
               >View more photos</a
             >
           </div>
         </div>
       </div>
+      <footer>
+        <div class="d-flex justify-content-center mb-4">
+          <a href="mailto:svolesky317@gmail.com" class="email-link"
+            >svolesky317@gmail.com</a
+          >
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a href="https://instagram.com/sjvolesky" target="_blank"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+          <a href="https://www.github.com/sjvolesky" target="_blank"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
