--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles/portfolio.css" />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -26,6 +26,7 @@
       src="https://kit.fontawesome.com/2e94843a60.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="styles/portfolio.css" />
 
     <title>Contact Me</title>
   </head>
@@ -56,21 +57,28 @@
     <div class="contact-container text-center">
       <div class="contact">
         <h1 class="mb-5">Let's get in touch!</h1>
-        <h3>Email</h3>
-        <p>
-          <a href="mailto:svolesky317@gmail.com">svolesky317@gmail.com</a>
-        </p>
-        <h3>Instagram</h3>
-        <p>
-          <a href="https://instagram.com/sjvolesky" target="_blank"
-            >@sjvolesky</a
-          >
-        </p>
+
         <h3>Zoey's Instagram</h3>
         <p>
           <a href="https://instagram.com/zoeymuck" target="_blank">@zoeymcuk</a>
         </p>
       </div>
+
+      <footer>
+        <div class="d-flex justify-content-center mb-4">
+          <a href="mailto:svolesky317@gmail.com" class="email-link"
+            >svolesky317@gmail.com</a
+          >
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a href="https://instagram.com/sjvolesky" target="_blank"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+          <a href="https://www.github.com/sjvolesky" target="_blank"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
