--- a/newborn.html
+++ b/newborn.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles/portfolio.css" />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -26,6 +26,7 @@
       src="https://kit.fontawesome.com/2e94843a60.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="styles/portfolio.css" />
 
     <title>Newborn photos</title>
   </head>
@@ -55,7 +56,7 @@
     </div>
     <div class="newborn-container">
       <div class="newborn">
-        <h1 class="text-center mt-4">Newborn photos of Zoey</h1>
+        <h1 class="text-center mt-5">Newborn photos of Zoey</h1>
         <div class="row">
           <div class="col-sm-6">
             <img
@@ -137,6 +138,26 @@
           </div>
         </div>
       </div>
+      <div class="homepage-button">
+        <a href="/index.html" class="btn btn-branding shadow mt-5"
+          >Back to homepage</a
+        >
+      </div>
+      <footer>
+        <div class="d-flex justify-content-center mb-4">
+          <a href="mailto:svolesky317@gmail.com" class="email-link"
+            >svolesky317@gmail.com</a
+          >
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a href="https://instagram.com/sjvolesky" target="_blank"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+          <a href="https://www.github.com/sjvolesky" target="_blank"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
