made pictures smaller and margins.

--- a/three-four.html
+++ b/three-four.html
@@ -54,8 +54,8 @@
       </nav>
     </div>
     <div class="three-four-container">
-      <div class="three-four">
-        <h1 class="text-center mt-4">Age 3-4 photos of Zoey</h1>
+      <div class="three-four mt-2">
+        <h1 class="text-center mb-4">Age 3-4 photos of Zoey</h1>
       </div>
       <div class="row">
         <div class="col-sm-6">
@@ -137,8 +137,8 @@
           />
         </div>
       </div>
-      <div class="row">
-        <div class="col-12">
+      <div class="row single">
+        <div class="col-md-12">
           <img
             src="images/four5.JPG"
             alt=""
