--- a/newborn.html
+++ b/newborn.html
@@ -56,16 +56,16 @@
     </div>
     <div class="newborn-container">
       <div class="newborn">
-        <h1 class="text-center mt-5">Newborn photos of Zoey</h1>
+        <h1 class="text-center mt-5 mb-5">Newborn photos of Zoey</h1>
         <div class="row">
-          <div class="col-sm-6">
+          <div class="col-md-6 gx-5">
             <img
               src="images/newborn1.jpg"
               alt=""
               class="img-fluid rounded mt-5 border p-2 shadow"
             />
           </div>
-          <div class="col-sm-6">
+          <div class="col-md-6 gx-5">
             <img
               src="images/newborn2.jpg"
               alt=""
@@ -74,14 +74,14 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-6">
+          <div class="col-md-6 gx-5">
             <img
               src="images/newborn3.jpg"
               alt=""
               class="img-fluid rounded mt-5 border p-2 shadow"
             />
           </div>
-          <div class="col-sm-6">
+          <div class="col-sm-6 gx-5">
             <img
               src="images/newborn4.jpg"
               alt=""
@@ -90,14 +90,14 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-6">
+          <div class="col-md-6 gx-5">
             <img
               src="images/newborn5.jpg"
               alt=""
               class="img-fluid rounded mt-5 border p-2 shadow"
             />
           </div>
-          <div class="col-sm-6">
+          <div class="col-md-6 gx-5">
             <img
               src="images/newborn8.jpg"
               alt=""
@@ -106,7 +106,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-6">
+          <div class="col-md-6 gx-5">
             <img
               src="images/newborn6.jpg"
               alt=""
@@ -122,14 +122,14 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-6">
+          <div class="col-sm-6 gx-5">
             <img
               src="images/newborn7.jpeg"
               alt=""
               class="img-fluid rounded mt-5 border p-2 shadow"
             />
           </div>
-          <div class="col-sm-6 ten">
+          <div class="col-sm-6 gx-5">
             <img
               src="images/newborn10.jpg"
               alt=""
