--- a/one-two.html
+++ b/one-two.html
@@ -81,19 +81,11 @@
             class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
-        <div class="col-md-6">
-          <img src="images/one2.jpg" alt="" class="img-fluid mt-5 p-2 shadow" />
+        <div class="col-md-6 mt-5">
+          <img src="images/one5.jpg" alt="" class="img-fluid mt-5 p-2 shadow" />
         </div>
       </div>
-      <div class="row">
-        <div class="col-sm-12">
-          <img
-            src="images/one5.jpg"
-            alt=""
-            class="img-fluid rounded mt-5 border p-2 shadow"
-          />
-        </div>
-      </div>
+
       <div class="row">
         <div class="col-md-6">
           <img
