added columns fixed margins

--- a/one-two.html
+++ b/one-two.html
@@ -58,65 +58,73 @@
         <h1 class="text-center mt-4">Age 1-2 photos of Zoey</h1>
       </div>
       <div class="row">
-        <div class="col-sm-6">
+        <div class="col-sm-1"></div>
+        <div class="col-sm-5">
           <img
             src="images/one1.jpg"
             alt=""
             class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-5">
           <img
             src="images/one4.jpg"
             alt=""
             class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
+        <div class="col-sm-1"></div>
       </div>
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-sm-1"></div>
+        <div class="col-md-5">
           <img
             src="images/one3.JPG"
             alt=""
             class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
-        <div class="col-md-6 mt-5">
+        <div class="col-md-5 mt-5">
           <img src="images/one5.jpg" alt="" class="img-fluid mt-5 p-2 shadow" />
         </div>
+        <div class="col-sm-1"></div>
       </div>
 
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-sm-1"></div>
+        <div class="col-md-5">
           <img
             src="images/two1.jpg"
             alt=""
             class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
-        <div class="col-md-6">
+        <div class="col-md-5">
           <img
             src="images/two2.jpg"
             alt=""
             class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
+        <div class="col-sm-1"></div>
       </div>
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-sm-1"></div>
+        <div class="col-md-5">
           <img
             src="images/two3.jpg"
             alt=""
             class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
-        <div class="col-md-6">
+        <div class="col-md-5">
           <img
             src="images/two4.JPG"
             alt=""
             class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
+        <div class="col-sm-1"></div>
       </div>
       <div class="homepage-button">
         <a href="/index.html" class="btn btn-branding shadow mt-5"
