--- a/three-four.html
+++ b/three-four.html
@@ -58,84 +58,94 @@
         <h1 class="text-center mb-4">Age 3-4 photos of Zoey</h1>
       </div>
       <div class="row">
-        <div class="col-sm-6">
+        <div class="col-sm-1"></div>
+        <div class="col-sm-5">
           <img
             src="images/three1.jpeg"
             alt=""
             class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-5">
           <img
             src="images/three2.JPG"
             alt=""
             class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
+        <div class="col-sm-1"></div>
       </div>
       <div class="row">
-        <div class="col-sm-6">
+        <div class="col-sm-1"></div>
+        <div class="col-sm-5">
           <img
             src="images/three3.JPG"
             alt=""
             class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-5">
           <img
             src="images/three4.JPG"
             alt=""
             class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
+        <div class="col-sm-1"></div>
       </div>
       <div class="row">
-        <div class="col-sm-6">
+        <div class="col-sm-1"></div>
+        <div class="col-sm-5">
           <img
             src="images/three5.JPG"
             alt=""
             class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-5">
           <img
             src="images/three6.JPG"
             alt=""
             class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
+        <div class="col-sm-1"></div>
       </div>
       <div class="row">
-        <div class="col-sm-6">
+        <div class="col-sm-1"></div>
+        <div class="col-sm-5">
           <img
             src="images/four1.jpg"
             alt=""
             class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-5">
           <img
             src="images/four2.jpg"
             alt=""
             class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
+        <div class="col-sm-1"></div>
       </div>
       <div class="row">
-        <div class="col-sm-6">
+        <div class="col-sm-1"></div>
+        <div class="col-sm-5">
           <img
             src="images/four3.jpg"
             alt=""
             class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-5">
           <img
             src="images/four4.jpg"
             alt=""
             class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
+        <div class="col-sm-1"></div>
       </div>
       <div class="row single">
         <div class="col-md-12">
