added SEO to the index.html

--- a/index.html
+++ b/index.html
@@ -25,28 +25,36 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
       rel="stylesheet"
     />
-    <title>In the life of a 4 year old</title>
+    <meta
+      name="description"
+      content="Samantha is a front-end developer based in the United States. Samantha learned front-end development through the SheCodes bootcamp."
+    />
+    <title>Front-end developer - Samantha Volesky</title>
   </head>
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="/">
-          <img src="images/logo.png" class="logo d-none d-sm-block" alt="" />
+        <a href="/" title="Homepage">
+          <img
+            src="images/logo.png"
+            class="logo d-none d-sm-block"
+            alt="SheCodes logo"
+          />
           <img
             src="images/logo-small.jpg"
             class="logo d-block d-md-none"
-            alt=""
+            alt="SheCodes logo small"
           />
         </a>
         <ul>
           <li class="active">
-            <a href="/"> Home</a>
+            <a href="/" title="Homepage"> Home</a>
           </li>
           <li>
-            <a href="/about.html"> About</a>
+            <a href="/about.html" title="About Samantha"> About</a>
           </li>
           <li>
-            <a href="/contact.html"> Contact</a>
+            <a href="/contact.html" title="Contact Samantha"> Contact</a>
           </li>
         </ul>
       </nav>
