added SEO to the about.html

--- a/about.html
+++ b/about.html
@@ -26,29 +26,36 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="styles/portfolio.css" />
-
+    <meta
+      name="description"
+      content="This is about Samantha and her daughter Zoey."
+    />
     <title>About Samantha</title>
   </head>
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="/">
-          <img src="images/logo.png" class="logo d-none d-sm-block" alt="" />
+        <a href="/" title="Homepage">
+          <img
+            src="images/logo.png"
+            class="logo d-none d-sm-block"
+            alt="SheCodes logo"
+          />
           <img
             src="images/logo-small.jpg"
             class="logo d-block d-md-none"
-            alt=""
+            alt="small shecodes logo"
           />
         </a>
         <ul>
           <li>
-            <a href="/"> Home</a>
+            <a href="/" title="Homepage"> Home</a>
           </li>
           <li class="active">
-            <a href="/about.html"> About</a>
+            <a href="/about.html" title="About Samantha"> About</a>
           </li>
           <li>
-            <a href="/contact.html"> Contact</a>
+            <a href="/contact.html" title="Contact Samantha"> Contact</a>
           </li>
         </ul>
       </nav>
@@ -86,7 +93,10 @@
               being part of her journey.
             </p>
 
-            <a href="/index.html" class="btn btn-branding shadow"
+            <a
+              href="/index.html"
+              class="btn btn-branding shadow"
+              title="Back to homepage"
               >Back to homepage</a
             >
           </div>
@@ -106,10 +116,16 @@
           >
         </div>
         <div class="social-links d-flex justify-content-center">
-          <a href="https://instagram.com/sjvolesky" target="_blank"
+          <a
+            href="https://instagram.com/sjvolesky"
+            target="_blank"
+            title="Samantha's Instagram link"
             ><i class="fa-brands fa-instagram"></i
           ></a>
-          <a href="https://www.github.com/sjvolesky" target="_blank"
+          <a
+            href="https://www.github.com/sjvolesky"
+            target="_blank"
+            title="Samantha's Github link"
             ><i class="fa-brands fa-github"></i
           ></a>
         </div>
