--- a/contact.html
+++ b/contact.html
@@ -33,23 +33,27 @@
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="/">
-          <img src="images/logo.png" class="logo d-none d-sm-block" alt="" />
+        <a href="/" title="Homepage">
+          <img
+            src="images/logo.png"
+            class="logo d-none d-sm-block"
+            alt="SheCodes logo"
+          />
           <img
             src="images/logo-small.jpg"
             class="logo d-block d-md-none"
-            alt=""
+            alt="SheCodes small logo"
           />
         </a>
         <ul>
           <li>
-            <a href="/"> Home</a>
+            <a href="/" title="Homepage"> Home</a>
           </li>
           <li>
-            <a href="/about.html"> About</a>
+            <a href="/about.html" title="About Samantha"> About</a>
           </li>
           <li class="active">
-            <a href="/contact.html"> Contact</a>
+            <a href="/contact.html" title="Contact Samantha"> Contact</a>
           </li>
         </ul>
       </nav>
@@ -60,21 +64,35 @@
 
         <h3>Zoey's Instagram</h3>
         <p>
-          <a href="https://instagram.com/zoeymuck" target="_blank">@zoeymcuk</a>
+          <a
+            href="https://instagram.com/zoeymuck"
+            target="_blank"
+            title="Zoey's instagram link"
+            >@zoeymcuk</a
+          >
         </p>
       </div>
 
       <footer>
         <div class="d-flex justify-content-center mb-4">
-          <a href="mailto:svolesky317@gmail.com" class="email-link"
+          <a
+            href="mailto:svolesky317@gmail.com"
+            class="email-link"
+            title="Samantha's Email link"
             >svolesky317@gmail.com</a
           >
         </div>
         <div class="social-links d-flex justify-content-center">
-          <a href="https://instagram.com/sjvolesky" target="_blank"
+          <a
+            href="https://instagram.com/sjvolesky"
+            target="_blank"
+            title="Samantha's Instagram link"
             ><i class="fa-brands fa-instagram"></i
           ></a>
-          <a href="https://www.github.com/sjvolesky" target="_blank"
+          <a
+            href="https://www.github.com/sjvolesky"
+            target="_blank"
+            title="Samantha's Github link"
             ><i class="fa-brands fa-github"></i
           ></a>
         </div>
