Added SEO to newborn.html

--- a/newborn.html
+++ b/newborn.html
@@ -27,29 +27,29 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="styles/portfolio.css" />
-
-    <title>Newborn photos</title>
+<meta name="description" content="This page has random pictures of Zoey during the first year of her life.">
+    <title>Newborn photos of Zoey</title>
   </head>
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="/">
-          <img src="images/logo.png" class="logo d-none d-sm-block" alt="" />
+        <a href="/" title="Homepage">
+          <img src="images/logo.png" class="logo d-none d-sm-block" alt="SheCodes logo" />
           <img
             src="images/logo-small.jpg"
             class="logo d-block d-md-none"
-            alt=""
+            alt="SheCodes small logo"
           />
         </a>
         <ul>
           <li>
-            <a href="/"> Home</a>
+            <a href="/" title="Homepage"> Home</a>
           </li>
           <li>
-            <a href="/about.html"> About</a>
+            <a href="/about.html" title="About Samantha"> About</a>
           </li>
           <li>
-            <a href="/contact.html"> Contact</a>
+            <a href="/contact.html" title="Contact Samantha"> Contact</a>
           </li>
         </ul>
       </nav>
@@ -62,14 +62,14 @@
             <div class="col-md-5">
               <img
                 src="images/newborn1.jpg"
-                alt=""
+                alt="Newborn photo of Zoey 0 months to 12 months"
                 class="img-fluid rounded mt-5 border p-2 shadow"
               />
             </div>
             <div class="col-md-5">
               <img
                 src="images/newborn2.jpg"
-                alt=""
+                alt="Newborn photo of Zoey 0 months to 12 months"
                 class="img-fluid rounded mt-5 border p-2 shadow"
               />
             </div>
@@ -81,14 +81,14 @@
           <div class="col-md-5">
             <img
               src="images/newborn3.jpg"
-              alt=""
+              alt="Newborn photo of Zoey 0 months to 12 months"
               class="img-fluid rounded mt-5 border p-2 shadow"
             />
           </div>
           <div class="col-sm-5">
             <img
               src="images/newborn4.jpg"
-              alt=""
+              alt="Newborn photo of Zoey 0 months to 12 months"
               class="img-fluid rounded mt-5 border p-2 shadow"
             />
           </div>
@@ -99,14 +99,14 @@
           <div class="col-md-5">
             <img
               src="images/newborn5.jpg"
-              alt=""
+              alt="Newborn photo of Zoey 0 months to 12 months"
               class="img-fluid rounded mt-5 border p-2 shadow"
             />
           </div>
           <div class="col-md-5">
             <img
               src="images/newborn8.jpg"
-              alt=""
+              alt="Newborn photo of Zoey 0 months to 12 months"
               class="img-fluid rounded mt-5 border p-2 shadow"
             />
           </div>
@@ -117,14 +117,14 @@
           <div class="col-md-5">
             <img
               src="images/newborn6.jpg"
-              alt=""
+              alt="Newborn photo of Zoey 0 months to 12 months"
               class="img-fluid rounded mt-5 border p-2 shadow"
             />
           </div>
           <div class="col-sm-5">
             <img
               src="images/newborn9.jpg"
-              alt=""
+              alt="Newborn photo of Zoey 0 months to 12 months"
               class="img-fluid rounded mt-5 border p-2 shadow"
             />
           </div>
@@ -135,14 +135,14 @@
           <div class="col-sm-5">
             <img
               src="images/newborn7.jpeg"
-              alt=""
+              alt="Newborn photo of Zoey 0 months to 12 months"
               class="img-fluid rounded mt-5 border p-2 shadow"
             />
           </div>
           <div class="col-sm-5">
             <img
               src="images/newborn10.jpg"
-              alt=""
+              alt="Newborn photo of Zoey 0 months to 12 months"
               class="img-fluid rounded mt-5 border p-2 shadow"
             />
           </div>
@@ -156,15 +156,15 @@
       </div>
       <footer>
         <div class="d-flex justify-content-center mb-4">
-          <a href="mailto:svolesky317@gmail.com" class="email-link"
+          <a href="mailto:svolesky317@gmail.com" class="email-link" title="Samantha's Email link"
             >svolesky317@gmail.com</a
           >
         </div>
         <div class="social-links d-flex justify-content-center">
-          <a href="https://instagram.com/sjvolesky" target="_blank"
+          <a href="https://instagram.com/sjvolesky" target="_blank" title="Samantha's Instagram link"
             ><i class="fa-brands fa-instagram"></i
           ></a>
-          <a href="https://www.github.com/sjvolesky" target="_blank"
+          <a href="https://www.github.com/sjvolesky" target="_blank" title="Samantha's Github link"
             ><i class="fa-brands fa-github"></i
           ></a>
         </div>
