--- a/one-two.html
+++ b/one-two.html
@@ -27,28 +27,32 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="styles/portfolio.css" />
-    <title>1-2 year photos</title>
+    <title>Zoey's 1-2 year photos</title>
   </head>
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="/">
-          <img src="images/logo.png" class="logo d-none d-sm-block" alt="" />
+        <a href="/" title="Homepage">
+          <img
+            src="images/logo.png"
+            class="logo d-none d-sm-block"
+            alt="SheCodes logo"
+          />
           <img
             src="images/logo-small.jpg"
             class="logo d-block d-md-none"
-            alt=""
+            alt="SheCodes logo small"
           />
         </a>
         <ul>
           <li>
-            <a href="/"> Home</a>
+            <a href="/" title="Homepage"> Home</a>
           </li>
           <li>
-            <a href="/about.html"> About</a>
+            <a href="/about.html" title="About Samantha"> About</a>
           </li>
           <li>
-            <a href="/contact.html"> Contact</a>
+            <a href="/contact.html" title="Contact Samantha"> Contact</a>
           </li>
         </ul>
       </nav>
@@ -62,14 +66,14 @@
         <div class="col-sm-5">
           <img
             src="images/one1.jpg"
-            alt=""
+            alt="Random Photos of Zoey aged 1-2 years"
             class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
         <div class="col-sm-5">
           <img
             src="images/one4.jpg"
-            alt=""
+            alt="Random Photos of Zoey aged 1-2 years"
             class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
@@ -80,12 +84,16 @@
         <div class="col-md-5">
           <img
             src="images/one3.JPG"
-            alt=""
+            alt="Random Photos of Zoey aged 1-2 years"
             class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
         <div class="col-md-5 mt-5">
-          <img src="images/one5.jpg" alt="" class="img-fluid mt-5 p-2 shadow" />
+          <img
+            src="images/one5.jpg"
+            alt="Random Photos of Zoey aged 1-2 years"
+            class="img-fluid mt-5 p-2 shadow"
+          />
         </div>
         <div class="col-sm-1"></div>
       </div>
@@ -95,14 +103,14 @@
         <div class="col-md-5">
           <img
             src="images/two1.jpg"
-            alt=""
+            alt="Random Photos of Zoey aged 1-2 years"
             class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
         <div class="col-md-5">
           <img
             src="images/two2.jpg"
-            alt=""
+            alt="Random Photos of Zoey aged 1-2 years"
             class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
@@ -113,35 +121,47 @@
         <div class="col-md-5">
           <img
             src="images/two3.jpg"
-            alt=""
+            alt="Random Photos of Zoey aged 1-2 years"
             class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
         <div class="col-md-5">
           <img
             src="images/two4.JPG"
-            alt=""
+            alt="Random Photos of Zoey aged 1-2 years"
             class="img-fluid rounded mt-5 border p-2 shadow"
           />
         </div>
         <div class="col-sm-1"></div>
       </div>
       <div class="homepage-button">
-        <a href="/index.html" class="btn btn-branding shadow mt-5"
+        <a
+          href="/index.html"
+          class="btn btn-branding shadow mt-5"
+          title="Back to homepage button"
           >Back to homepage</a
         >
       </div>
       <footer>
         <div class="d-flex justify-content-center mb-4">
-          <a href="mailto:svolesky317@gmail.com" class="email-link"
+          <a
+            href="mailto:svolesky317@gmail.com"
+            class="email-link"
+            title="Samantha's email link"
             >svolesky317@gmail.com</a
           >
         </div>
         <div class="social-links d-flex justify-content-center">
-          <a href="https://instagram.com/sjvolesky" target="_blank"
+          <a
+            href="https://instagram.com/sjvolesky"
+            target="_blank"
+            title="Samantha's Instagram link"
             ><i class="fa-brands fa-instagram"></i
           ></a>
-          <a href="https://www.github.com/sjvolesky" target="_blank"
+          <a
+            href="https://www.github.com/sjvolesky"
+            target="_blank"
+            title="Samantha's Github link"
             ><i class="fa-brands fa-github"></i
           ></a>
         </div>
